argocd/back_test/base/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: test-aws 
spec:
  selector:
    matchLabels:
      app: test-aws
  replicas: 1
  template:
    metadata:
      labels:
        app: test-aws
    spec:
      containers:
      - name: test-aws 
        image: rszim/aws:testing 
        command: ["/bin/bash", "-c", "python main.py"]
        imagePullPolicy: Always
        ports:
          - containerPort: 8000
      restartPolicy: Always
