argocd/back_test/base/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: test-alb
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip 
spec:
  rules:
  - host: testaws.nh.test 
    http:
      paths:
      - backend:
          service:
            name: testawsservice
            port:
              number: 80
        path: /
        pathType: Prefix
